// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should match snapshot 1`] = `
<div
  className="roe-slider horizontal"
>
  <div
    className="roe-bar"
  >
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "0%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should match snapshot with props (min, max, initialValue) 1`] = `
<div
  className="roe-slider horizontal"
>
  <div
    className="roe-bar"
  >
    <span
      className="roe-bar__min"
      style={
        Object {
          "width": "20%",
        }
      }
    />
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "30%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should match snapshot with props (orientation="vertical") 1`] = `
<div
  className="roe-slider vertical stepped"
>
  <div
    className="roe-bar"
  >
    <span
      className="roe-bar__min"
      style={
        Object {
          "height": "25%",
        }
      }
    />
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "top": "25%",
        }
      }
    >
      <span
        className="roe-handle-popover"
      >
        <span>
          25
        </span>
      </span>
    </div>
    <span
      className="roe-bar__steps fade"
      style={
        Object {
          "top": "0%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "top": "25%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "top": "50%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "top": "75%",
        }
      }
    />
    <span
      className="roe-bar__steps fade"
      style={
        Object {
          "top": "100%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "height": "25%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should match snapshot with props (popover, range, initialFrom, initialTo) 1`] = `
<div
  className="roe-slider horizontal range"
>
  <div
    className="roe-bar"
  >
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "25%",
        }
      }
    >
      <span
        className="roe-handle-popover"
      >
        <span>
          25
        </span>
      </span>
    </div>
    <div
      className="roe-handle roe-handle__range"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "88%",
        }
      }
    >
      <span
        className="roe-handle-popover"
      >
        <span>
          88
        </span>
      </span>
    </div>
    <span
      className="roe-bar-range"
      style={
        Object {
          "left": "25%",
          "right": "12%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "0%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should match snapshot with props (range, stepped, steps) 1`] = `
<div
  className="roe-slider horizontal margin-top-large margin-bottom-large stepped range"
>
  <div
    className="roe-bar"
  >
    <span
      className="roe-bar__min"
      style={
        Object {
          "width": "12.5%",
        }
      }
    />
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "25%",
        }
      }
    >
      <span
        className="roe-handle-popover"
      >
        <span>
          25
        </span>
      </span>
    </div>
    <div
      className="roe-handle roe-handle__range"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "50%",
        }
      }
    >
      <span
        className="roe-handle-popover"
      >
        <span>
          50
        </span>
      </span>
    </div>
    <span
      className="roe-bar-range"
      style={
        Object {
          "left": "25%",
          "right": "50%",
        }
      }
    />
    <span
      className="roe-bar__steps fade"
      style={
        Object {
          "left": "0%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "12.5%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "25%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "37.5%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "50%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "62.5%",
        }
      }
    />
    <span
      className="roe-bar__steps"
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <span
      className="roe-bar__steps fade"
      style={
        Object {
          "left": "87.5%",
        }
      }
    />
    <span
      className="roe-bar__steps fade"
      style={
        Object {
          "left": "100%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should return max if initialValue is greater than max value for single slider 1`] = `
<div
  className="roe-slider horizontal"
>
  <div
    className="roe-bar"
  >
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "80%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "20%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should return min and max values for ranged slider - initialFrom greater than max, initialTo less than min 1`] = `
<div
  className="roe-slider horizontal range"
>
  <div
    className="roe-bar"
  >
    <span
      className="roe-bar__min"
      style={
        Object {
          "width": "12.5%",
        }
      }
    />
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <div
      className="roe-handle roe-handle__range"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "12.5%",
        }
      }
    />
    <span
      className="roe-bar-range"
      style={
        Object {
          "left": "75%",
          "right": "87.5%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
</div>
`;

exports[`Slider should return min and max values for ranged slider - initialFrom less than min, initialTo greater than max 1`] = `
<div
  className="roe-slider horizontal range"
>
  <div
    className="roe-bar"
  >
    <span
      className="roe-bar__min"
      style={
        Object {
          "width": "12.5%",
        }
      }
    />
    <div
      className="roe-handle"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "12.5%",
        }
      }
    />
    <div
      className="roe-handle roe-handle__range"
      onMouseDown={[Function]}
      style={
        Object {
          "left": "75%",
        }
      }
    />
    <span
      className="roe-bar-range"
      style={
        Object {
          "left": "12.5%",
          "right": "25%",
        }
      }
    />
    <span
      className="roe-bar__max"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
</div>
`;
